<resources>
    <string name="app_name">bwScore</string>
    <string name="details_text">DETAILS</string>
    <string name="main_text">APP-INFO</string>
    <string name="map_text">SCORE</string>
    <string name="mobscore_text">Dein Mobility-Score:</string>
    <string name="action_settings">Einstellungen</string>
    <string name="map_description">Karte/Score</string>
    <string name="main_description">Dank bwScore bist du nun ab sofort immer bestens informiert über die Qualität des Mobilitätsangebots in deiner Nähe - egal ob in der Stadt oder auf dem Land!</string>
    <string name="start_welcome" translatable="false">Willkommen!</string>
    <string name="start_welcome2" translatable="false">Was bietet dir diese App?</string>
    <string name="start_welcome3" translatable="false">bwScore liefert dir innerhalb von wenigen Sekunden ein umfassendes Bild von der Qualität des Mobilitätsangebots in deiner Nähe – und das in Echtzeit, an deinem Standort und vor allem angebotsübergreifend!</string>
    <string name="start_welcome4" translatable="false">Wie funktioniert\'s?</string>
    <string name="start_welcome5" translatable="false">Ausgehend von deinem Standort wird ein Score ermittelt, in den ganz viele Mobilitäts-Faktoren mit einfließen.</string>
    <string name="start_welcome6" translatable="false">Du erhältst so eine schnelle und aussagekräftige Bewertung des Mobilitätsangebots in deiner Umgebung – in Form einer Note von 1 – 6!</string>
    <string name="start_welcome7" translatable="false">Einfach auf den mittleren Button drücken und los geht’s!</string>
    <string name="link_nextbike" translatable="false">https://www.kvv-nextbike.de/de/</string>
    <string name="link_bwegt" translatable="false">https://www.bwegt.de/</string>
    <string name="start_welcome8" translatable="false">Ein Projekt von Studierenden der Hochschule Karlsruhe</string>
    <string name="details_description">Details</string>
    <string name="light_theme_name">Light Theme</string>
    <string name="waiting_score">Hier erscheint eine Übersicht zu den Details des Mobility-Scores\n \n \n Zuerst über \'SCORE\' einen Mobility-Score berechnen lassen</string>
    <string name="grade_header">Details zu deinem Mobility-Score</string>
    <string name="test">Test Value</string>
    <string name="no_value">None</string>
    <string name="line_description">Trennlinie</string>
    <string name="grade_final">Gesamtnote</string>
    <string name="grade_pt">ÖPNV Note</string>
    <string name="grade_bike">Nextbike Note</string>
    <string name="grade_offset">setzt sich zusammen aus:</string>
    <string name="grade_stopAmount">Anzahl der Haltestellen</string>
    <string name="grade_stopDistance">Entfernung nächste Haltestelle</string>
    <string name="grade_stopDeparture">Abfahrten an den Haltestellen</string>
    <string name="grade_stopModules">Anzahl Verkehrsmitteltypen</string>
    <string name="grade_bikeAmount">Anzahl der Nextbikes</string>
    <string name="grade_bikeStations">Anzahl der Nextbike Stationen</string>
    <string name="grade_bikeDistance">Entfernung nächstes Nextbike</string>
    <string name="grade_explanation">Erläuterungen zum Mobility-Score:</string>
    <string name="detail_explanation1">Wie du siehst setzt sich dein Mobility-Score aus verschiedenen Aspekten zusammen. \nGrundlegend werden beim Mobility-Score zwei Aspekte berücksichtigt - zum einem das Bus und Bahn Angebot in deiner Umgebung - zum anderen das Bikesharing Angebot. Für jedes dieser Angebote berechnet dir bwScore zunächst eine eigene Note und verrechnet diese am Ende (je nach deinen Präferenzen) zu einem gesamten Score. Hierbei betrachten wir alles was bis zu 1,5 km von dir entfernt ist! \n </string>
    <string name="detail_explanation2">Die Note für den ÖPNV setzt sich aus vier Aspekten zusammen:</string>
    <string name="detail_explanation3"> - Anzahl Haltestelle in deiner Nähe (Note 1 gibt es ab 20 Haltestellen, Note 6 bei keiner einzigen) \n \n
        - Die Entfernung zu deiner nächsten Haltestelle (Note 1 gibt es ab weniger als 250m, Note 6 ab 1km) \n \n
        - Die Anzahl an Abfahrten (Note 1 bei 12 oder mehr Abfahrten innerhalb der nächsten halben Stunde, Note 6 bei keiner einzigen Abfahrt in der nächsten halben Stunde | !ACHTUNG! Die Anzahl an Abfahrten die wir berücksichtigen ist der Durchschnittswert für alle Haltestellen in deiner Umgebung) \n \n
        - Die verschiedenen Typen an Verkehrsmitteln: Hierbei kommt es nicht nur auf die Anzahl, sondern vor allem auf die Qualität der einzelnen Verkehrsmitteln an. Richtige Zugangebote erhalten 4 Punkte, Schienenverkehr wie U-Bahn oder Tram erhalten 3 Punkte, Straßenverkehr wie Busse erhalten 2 Punkte und On-Demand-Verkehre nur einen Punkt. Die Note 1 gibt es dann ab 12 Punkten! \n \n </string>
    <string name="detail_explanation4">Bei den Bike-Sharing Angeboten achten wir auf drei Sachen:</string>
    <string name="detail_explanation5">- Anzahl Nextbikes (Note 1 ab 125 Rädern, Note 6 ab 0 Rädern) \n \n
        - Anzahl Nextbike Stationen (Note 1 ab 7 Stationen, Note 6 bei keiner einzigen Station) \n \n
        - Abstand zum nächsten Nextbike (Note 1 bis 50m, Note 6 ab 1km) \n \n</string>
    <string name="detail_explanation6">Damit solltest du nun bestens über deinen Mobility-Score informiert sein und verstehst nun, was dein Mobility-Score dir über deine Umgebung verrät!</string>
    <string name="score_thelaend">ScoreTheLänd</string>
    <string name="load_start">Berechnung gestartet</string>
    <string name="action_preferences">Präferenzen</string>
    <string name="pop_productClasses">Verkehrsmittel</string>
    <string name="train">Eisenbahn</string>
    <string name="railroad">Schienengebundener ÖPNV</string>
    <string name="road">Straßengebundener ÖPNV</string>
    <string name="ondemand">On-Demand Angebote</string>
    <string name="bwegt_logo">bwegt_logo</string>
    <string name="kvvnextbike_logo">kvvnextbike_logo</string>
</resources>